# Profiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt  example-flow.main.cpp  example-transform.main.cpp  example.main.cpp  main.cpp  merge.main.cpp
include/ProfilerLib/: DurationEvent.hpp  OptionalSerialization.hpp  Profiler.hpp  ProfilerUtil.hpp  Scope.hpp  ScopeEvent.hpp  TraceEvent.hpp  TraceEventFile.hpp
lib/ProfilerLib/: CMakeLists.txt  DurationEvent.cpp  DurationEvent.hpp  OptionalSerialization.hpp  Profiler.cpp  Profiler.hpp  ProfilerUtil.cpp  ProfilerUtil.hpp  ScopeEvent.cpp  TraceEvent.hpp  TraceEventFile.cpp
modules/: DurationEvent.cpp  ProfilerUtil.cppm  Scope.cppm  ScopeEvent.cpp  TraceEvent.cppm  TraceEventFile.cppm  profiler.cppm  profiler_impl.cpp
src/: DurationEvent.cpp  OptionalSerialization.hpp  Profiler.cpp  ProfilerUtil.cpp  ProfilerUtil.hpp  ScopeEvent.cpp  TraceEvent.hpp  TraceEventFile.cpp  TraceEventFile.hpp
